--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,10 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@aptos-labs/ts-sdk": "^1.35.0",
+    "@aptos-labs/wallet-adapter-ant-design": "^4.0.6",
+    "@aptos-labs/wallet-adapter-react": "^4.1.3",
+    "@goat-sdk/core": "^0.4.9",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@t3-oss/env-nextjs": "^0.10.1",
@@ -25,6 +29,7 @@
     "lucide-react": "^0.482.0",
     "next": "^15.0.1",
     "next-themes": "^0.4.6",
+    "petra-plugin-wallet-adapter": "^0.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sonner": "^2.0.1",
