--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,9 +20,11 @@
     "@aptos-labs/wallet-adapter-ant-design": "^4.0.6",
     "@aptos-labs/wallet-adapter-react": "^4.1.3",
     "@goat-sdk/core": "^0.4.9",
+    "@lighthouse-web3/sdk": "^0.3.7",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "aptos": "^1.21.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "geist": "^1.3.0",
