--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.482.0",
     "next": "^15.0.1",
     "next-themes": "^0.4.6",
+    "openai": "^4.87.3",
     "petra-plugin-wallet-adapter": "^0.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
