--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,9 @@
     "@goat-sdk/core": "^0.4.9",
     "@lighthouse-web3/sdk": "^0.3.7",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@t3-oss/env-nextjs": "^0.10.1",
     "aptos": "^1.21.0",
